--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,239 +1,242 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>Cat Energy - Catalog</title>
-  </head>
-  <body>
-    <header class="header">
-      <a class="header__logo logo" href="index.html">
+
+<head>
+  <meta charset="utf-8">
+  <title>Cat Energy - Catalog</title>
+</head>
+
+<body>
+  <header class="header">
+    <a class="logo" href="index.html">
+      <svg></svg>
+    </a>
+    <nav class="main-nav">
+      <button class="main-nav__toggle">
+        Открыть меню
+      </button>
+      <a class="main-nav__link" href="index.html">Главная</a>
+      <a class="main-nav__link main-nav__link--current">Каталог продукции</a>
+      <a class="main-nav__link" href="form.html">Подбор программы</a>
+    </nav>
+  </header>
+  <main class="main-container">
+    <section class="catalog">
+      <h1 class="catalog__title">Каталог продукции</h1>
+      <article class="product-card">
+        <img class="product-card__image" src="" width="" height="" alt="Изображение продукта Cat Energy Pro 500г.">
+        <h2 class="product-card__title">Cat Energy Pro 500г</h2>
+        <table class="product-card__description">
+          <tr>
+            <th>Масса</th>
+            <td>500 г</td>
+          </tr>
+          <tr>
+            <th>Вкус</th>
+            <td>Курица</td>
+          </tr>
+          <tr>
+            <th>Цена</th>
+            <td>700 ₽</td>
+          </tr>
+        </table>
+        <a class="button" href="#">Заказать</a>
+      </article>
+      <article class="product-card">
+        <img class="product-card__image" id="pro" src="" width="" height=""
+          alt="Изображение продукта Cat Energy Pro 1000г.">
+        <h2 class="product-card__title">Cat Energy Pro 1000г</h2>
+        <table class="product-card__description">
+          <tr>
+            <th>Масса</th>
+            <td>1000 г</td>
+          </tr>
+          <tr>
+            <th>Вкус</th>
+            <td>Курица</td>
+          </tr>
+          <tr>
+            <th>Цена</th>
+            <td>1000 ₽</td>
+          </tr>
+        </table>
+        <a class="button" href="#">Заказать</a>
+      </article>
+      <article class="product-card">
+        <img class="product-card__image" src="" width="" height="" alt="Изображение продукта Cat Energy Pro 500г.">
+        <h2 class="product-card__title">Cat Energy Pro 500г</h2>
+        <table class="product-card__description">
+          <tr>
+            <th>Масса</th>
+            <td>500 г</td>
+          </tr>
+          <tr>
+            <th>Вкус</th>
+            <td>Рыба</td>
+          </tr>
+          <tr>
+            <th>Цена</th>
+            <td>700 ₽</td>
+          </tr>
+        </table>
+        <a class="button" href="#">Заказать</a>
+      </article>
+      <article class="product-card">
+        <img class="product-card__image" src="" width="" height="" alt="Изображение продукта Cat Energy Pro 1000г.">
+        <h2 class="product-card__title">Cat Energy Pro 1000г</h2>
+        <table class="product-card__description">
+          <tr>
+            <th>Масса</th>
+            <td>1000 г</td>
+          </tr>
+          <tr>
+            <th>Вкус</th>
+            <td>Рыба</td>
+          </tr>
+          <tr>
+            <th>Цена</th>
+            <td>1000 ₽</td>
+          </tr>
+        </table>
+        <a class="button" href="#">Заказать</a>
+      </article>
+      <article class="product-card">
+        <img class="product-card__image" id="slim" src="" width="" height=""
+          alt="Изображение продукта Cat Energy Slim 500г.">
+        <h2 class="product-card__title">Cat Energy Slim 500г</h2>
+        <table class="product-card__description">
+          <tr>
+            <th>Масса</th>
+            <td>500 г</td>
+          </tr>
+          <tr>
+            <th>Вкус</th>
+            <td>Гречка</td>
+          </tr>
+          <tr>
+            <th>Цена</th>
+            <td>400 ₽</td>
+          </tr>
+        </table>
+        <a class="button" href="#">Заказать</a>
+      </article>
+      <article class="product-card">
+        <img class="product-card__image" src="" width="" height="" alt="Изображение продукта Cat Energy Slim 1000г.">
+        <h2 class="product-card__title">Cat Energy Slim 1000г</h2>
+        <table class="product-card__description">
+          <tr>
+            <th>Масса</th>
+            <td>1000 г</td>
+          </tr>
+          <tr>
+            <th>Вкус</th>
+            <td>Гречка</td>
+          </tr>
+          <tr>
+            <th>Цена</th>
+            <td>700 ₽</td>
+          </tr>
+        </table>
+        <a class="button" href="#">Заказать</a>
+      </article>
+      <article class="product-card">
+        <img class="product-card__image" src="" width="" height="" alt="Изображение продукта Cat Energy Slim 500г.">
+        <h2 class="product-card__title">Cat Energy Slim 500г</h2>
+        <table class="product-card__description">
+          <tr>
+            <th>Масса</th>
+            <td>500 г</td>
+          </tr>
+          <tr>
+            <th>Вкус</th>
+            <td>Рис</td>
+          </tr>
+          <tr>
+            <th>Цена</th>
+            <td>500 ₽</td>
+          </tr>
+        </table>
+        <a class="button" href="#">Заказать</a>
+      </article>
+      <article class="product-card product-card--show-more">
+        <h2 class="product-card__title">Показать еще 100500 товаров</h2>
+        <p class="product-card__subtitle">На самом деле вкусов гораздо больше!</p>
+        <a class="button button--secondary">Показать все</a>
+      </article>
+    </section>
+    <section class="catalog-additional">
+      <h1 class="catalog-additional__title">Дополнительные товары</h1>
+      <article class="product-card product-card--additional">
+        <h2 class="product-card__title">Сахарозаменитель</h2>
+        <table class="product-card__description">
+          <tr>
+            <th>1 упаковка(100 г)</th>
+            <td>200 ₽</td>
+          </tr>
+        </table>
+        <a class="button" href="#">Заказать</a>
+      </article>
+      <article class="product-card product-card--additional">
+        <h2 class="product-card__title">Питьевая вода</h2>
+        <table class="product-card__description">
+          <tr>
+            <th>5 литров</th>
+            <td>50 ₽</td>
+          </tr>
+        </table>
+        <a class="button" href="#">Заказать</a>
+      </article>
+      <article class="product-card product-card--additional">
+        <h2 class="product-card__title">Молоко</h2>
+        <table class="product-card__description">
+          <tr>
+            <th>1 литр</th>
+            <td>100 ₽</td>
+          </tr>
+        </table>
+        <a class="button" href="#">Заказать</a>
+      </article>
+      <article class="product-card product-card--additional">
+        <h2 class="product-card__title">Витамины</h2>
+        <table class="product-card__description">
+          <tr>
+            <th>1 упаковка(30 г)</th>
+            <td>300 ₽</td>
+          </tr>
+        </table>
+        <a class="button" href="#">Заказать</a>
+      </article>
+    </section>
+    <section class="promotion" aria-label="Акция">
+      <!-- <img src="" width="" height="" alt="Портфель-переноска для котов"> -->
+      <p class="promotion__description">Закажите все и получите чехол для кота в подарок!</p>
+    </section>
+    <section class="invite-dealers">
+      <h3 class="invite-dealers__title">Приглашаем к сотрудничеству дилеров!</h3>
+      <p class="invite-dealers__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      <img class="invite-dealers__map" src="" width="" height="" alt="Карта местоположения офиса компании">
+    </section>
+  </main>
+  <footer class="footer">
+    <a class="logo logo--letter">
+      <svg></svg>
+    </a>
+    <div class="social">
+      <a class="social__link social__link--vk" href="https://vk.com/htmlacademy" aria-label="Вконтакте.">
         <svg></svg>
       </a>
-      <nav class="main-nav">
-        <button class="main-nav__toggle" type="button" aria-label="Открыть меню">
-          <svg>
-          </svg>
-        </button>
-        <a class="main-nav__link site-link" href="index.html">Главная</a>
-        <a class="main-nav__link main-nav__link--current site-link">Каталог продукции</a>
-        <a class="main-nav__link site-link" href="form.html">Подбор программы</a>
-      </nav>
-    </header>
-    <main class="main-container">
-      <section class="catalog">
-        <h1 class="catalog__heading heading">Каталог продукции</h1>
-        <article class="product-card">
-          <img class="product-card__image" src="" width="" height="" alt="Изображение продукта Cat Energy Pro 500г.">
-            <h2 class="product-card__title">Cat Energy Pro 500г</h2>
-            <table class="product-card__description">
-              <tr>
-                <th>Масса</th>
-                <td>500 г</td>
-              </tr>
-              <tr>
-                <th>Вкус</th>
-                <td>Курица</td>
-              </tr>
-              <tr>
-                <th>Цена</th>
-                <td>700 ₽</td>
-              </tr>
-            </table>
-            <button class="product-card__button button" type="button">Заказать</button>
-        </article>
-        <article class="product-card">
-          <img class="product-card__image" id="pro" src="" width="" height="" alt="Изображение продукта Cat Energy Pro 1000г.">
-            <h2 class="product-card__title">Cat Energy Pro 1000г</h2>
-            <table class="product-card__description">
-              <tr>
-                <th>Масса</th>
-                <td>1000 г</td>
-              </tr>
-              <tr>
-                <th>Вкус</th>
-                <td>Курица</td>
-              </tr>
-              <tr>
-                <th>Цена</th>
-                <td>1000 ₽</td>
-              </tr>
-            </table>
-            <button class="product-card__button button" type="button">Заказать</button>
-        </article>
-        <article class="product-card">
-          <img class="product-card__image" src="" width="" height="" alt="Изображение продукта Cat Energy Pro 500г.">
-            <h2 class="product-card__title">Cat Energy Pro 500г</h2>
-            <table class="product-card__description">
-              <tr>
-                <th>Масса</th>
-                <td>500 г</td>
-              </tr>
-              <tr>
-                <th>Вкус</th>
-                <td>Рыба</td>
-              </tr>
-              <tr>
-                <th>Цена</th>
-                <td>700 ₽</td>
-              </tr>
-            </table>
-            <button class="product-card__button button" type="button">Заказать</button>
-        </article>
-        <article class="product-card">
-          <img class="product-card__image" src="" width="" height="" alt="Изображение продукта Cat Energy Pro 1000г.">
-            <h2 class="product-card__title">Cat Energy Pro 1000г</h2>
-            <table class="product-card__description">
-              <tr>
-                <th>Масса</th>
-                <td>1000 г</td>
-              </tr>
-              <tr>
-                <th>Вкус</th>
-                <td>Рыба</td>
-              </tr>
-              <tr>
-                <th>Цена</th>
-                <td>1000 ₽</td>
-              </tr>
-            </table>
-            <button class="product-card__button button" type="button">Заказать</button>
-        </article>
-        <article class="product-card">
-          <img class="product-card__image" id="slim" src="" width="" height="" alt="Изображение продукта Cat Energy Slim 500г.">
-            <h2 class="product-card__title">Cat Energy Slim 500г</h2>
-            <table class="product-card__description">
-              <tr>
-                <th>Масса</th>
-                <td>500 г</td>
-              </tr>
-              <tr>
-                <th>Вкус</th>
-                <td>Гречка</td>
-              </tr>
-              <tr>
-                <th>Цена</th>
-                <td>400 ₽</td>
-              </tr>
-            </table>
-            <button class="product-card__button button" type="button">Заказать</button>
-        </article>
-        <article class="product-card">
-          <img class="product-card__image" src="" width="" height="" alt="Изображение продукта Cat Energy Slim 1000г.">
-            <h2 class="product-card__title">Cat Energy Slim 1000г</h2>
-            <table class="product-card__description">
-              <tr>
-                <th>Масса</th>
-                <td>1000 г</td>
-              </tr>
-              <tr>
-                <th>Вкус</th>
-                <td>Гречка</td>
-              </tr>
-              <tr>
-                <th>Цена</th>
-                <td>700 ₽</td>
-              </tr>
-            </table>
-            <button class="product-card__button button" type="button">Заказать</button>
-        </article>
-        <article class="product-card">
-          <img class="product-card__image" src="" width="" height="" alt="Изображение продукта Cat Energy Slim 500г.">
-            <h2 class="product-card__title">Cat Energy Slim 500г</h2>
-            <table class="product-card__description">
-              <tr>
-                <th>Масса</th>
-                <td>500 г</td>
-              </tr>
-              <tr>
-                <th>Вкус</th>
-                <td>Рис</td>
-              </tr>
-              <tr>
-                <th>Цена</th>
-                <td>500 ₽</td>
-              </tr>
-            </table>
-            <button class="product-card__button button" type="button">Заказать</button>
-        </article>
-        <article class="product-card product-card--show-more">
-          <img class="product-card__image" src="" width="" height="" alt="Изображение продукта Cat Energy Pro 500г.">
-            <h2 class="product-card__title">Показать еще 100500 товаров</h2>
-            <p class="product-card__subtitle">На самом деле вкусов гораздо больше!</p>
-            <button class="product-card__button button button-secondary" type="button">Показать все</button>
-        </article>
-      </section>
-      <section class="additional-products">
-        <h2 class="additional-products__heading heading">Дополнительные товары</h2>
-        <ul class="additional-products__list">
-          <li class="additional-products__item">
-            <h3 class="additional-products__title">Сахарозаменитель</h3>
-            <table class="additional-products__description">
-              <tr>
-                <th>1 упаковка(100 г)</th>
-                <td>200 ₽</td>
-              </tr>
-            </table>
-            <button class="additional-products__button button" type="button">Заказать</button>
-          </li>
-          <li class="additional-products__item">
-            <h3 class="additional-products__title">питьевая вода</h3>
-            <table class="additional-products__description">
-              <tr>
-                <th>5 литров</th>
-                <td>50 ₽</td>
-              </tr>
-            </table>
-            <button class="additional-products__button button" type="button">Заказать</button>
-          </li>
-          <li class="additional-products__item">
-            <h3 class="additional-products__title">Молоко</h3>
-            <table class="additional-products__description">
-              <tr>
-                <th>1 литр</th>
-                <td>100 ₽</td>
-              </tr>
-            </table>
-            <button class="additional-products__button button" type="button">Заказать</button>
-          </li>
-          <li class="additional-products__item">
-            <h3 class="additional-products__title">Витамины</h3>
-            <table class="additional-products__description">
-              <tr>
-                <th>1 упаковка(30 г)</th>
-                <td>300 ₽</td>
-              </tr>
-            </table>
-            <button class="additional-products__button button" type="button">Заказать</button>
-          </li>
-        </ul>
-      </section>
-      <section class="promotion" aria-label="Акция">
-        <img src="" width="" height="" alt="Портфель-переноска для котов">
-      </section>
-      <section class="invite-dealers">
-        <h3 class="invite-dealers__heading">Приглашаем к сотрудничеству дилеров!</h3>
-        <p class="invite-dealers__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-        <img class="invite-dealers__map" src="" width="" height="" alt="Карта местоположения офиса компании">
-      </section>
-    </main>
-    <footer class="footer">
-      <a class="footer__logo logo">
+      <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru"
+        aria-label="Ютуб.">
         <svg></svg>
       </a>
-      <div class="footer__social-wrapper">
-        <a class="footer__social-link footer__social-link--vk" href="https://vk.com/htmlacademy" aria-label="Вконтакте.">
-          <svg></svg>
-        </a>
-        <a class="footer__social-link footer__social-link--youtube" href="https://www.youtube.com/user/htmlacademyru" aria-label="Ютуб.">
-          <svg></svg>
-        </a>
-        <a class="footer__social-link footer__social-link--telegram" href="https://t.me/htmlacademy" aria-label="Телеграм.">
-          <svg></svg>
-        </a>
-      </div>
-      <a class="footer__Academy-logo" href="https://htmlacademy.ru/">
+      <a class="social__link social__link--telegram" href="https://t.me/htmlacademy" aria-label="Телеграм.">
         <svg></svg>
       </a>
-    </footer>
-  </body>
+    </div>
+    <a class="footer__Academy-logo" href="https://htmlacademy.ru/">
+      <svg></svg>
+    </a>
+  </footer>
+</body>
+
 </html>
