--- a/source/index.html
+++ b/source/index.html
@@ -1,100 +1,111 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>Cat Energy</title>
-  </head>
-  <body>
-    <header class="header">
-      <a class="header__logo logo" href="index.html">
-        <svg></svg>
-      </a>
-      <nav class="main-nav">
-        <button class="main-nav__toggle" type="button" aria-label="Открыть меню">
-          <svg>
-          </svg>
+
+<head>
+  <meta charset="utf-8">
+  <title>Cat Energy</title>
+</head>
+
+<body>
+  <header class="header">
+    <a class="logo" href="index.html">
+      <svg></svg>
+    </a>
+    <nav class="main-nav">
+      <button class="main-nav__toggle">
+        Открыть меню
+      </button>
+      <a class="main-nav__link main-nav__link--current">Главная</a>
+      <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
+      <a class="main-nav__link" href="form.html">Подбор программы</a>
+    </nav>
+  </header>
+  <main class="main-container">
+    <section class="hero">
+      <h1 class="hero__title">Функциональное питание для котов</h1>
+      <h2 class="hero__subtitle">Занялся собой? Займись котом!</h2>
+      <a class="button" href="form.html">Подобрать программу</a>
+    </section>
+    <section class="diet diet--slim">
+      <h2 class="diet__title">Похудение</h2>
+      <p class="diet__intro">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету!
+        Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+      </p>
+      <a class="diet__link" href="catalog.html#slim">Каталог Slim</a>
+    </section>
+    <section class="diet diet--pro">
+      <h2 class="diet__title">Набор массы</h2>
+      <p class="diet__intro">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему
+        коту нарастить необходимые мышцы!
+      </p>
+      <a class="diet__link" href="catalog.html#pro">Каталог Pro</a>
+    </section>
+    <section class="advantages">
+      <h2 class="advantages__title">Как это работает</h2>
+      <ul class="advantages__list">
+        <li class="advantages__item advantages__item--benefit">Функциональное питание cодержит только полезные
+          питательные вещества.
+        </li>
+        <li class="advantages__item advantages__item--release-form">Выпускается в виде порошка, который нужно лишь
+          залить кипятком и готово.
+        </li>
+        <li class="advantages__item advantages__item--replace-food">Замените один-два приема обычной еды на наше
+          функциональное питание.
+        </li>
+        <li class="advantages__item advantages__item--fast-result">Уже через месяц наслаждайтесь изменениями к лучшему
+          вашего питомца!
+        </li>
+      </ul>
+    </section>
+    <section class="example">
+      <h2 class="example__title">Живой пример</h2>
+      <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
+        Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов
+        в день.
+      </p>
+      <dl class="example__list">
+        <dt class="example__weight">Снижение веса</dt>
+        <dd class="example__description">5 кг</dd>
+      </dl>
+      <dl class="example__list">
+        <dt class="example__time">Затрачено времени</dt>
+        <dd class="example__description">60 дней</dd>
+      </dl>
+      <p class="example__expenses">Затраты на питание: 15 000 руб.</p>
+      <div class="example__slider">
+        <img class="example__image-before" src="" width="" height="" alt="Толстый кот.">
+        <img class="example__image-after" src="" width="" height="" alt="Стройный кот.">
+        <button class="button" aria-label="Подвиньте вправо или влево.">
+          <svg></svg>
         </button>
-        <a class="main-nav__link main-nav__link--current site-link">Главная</a>
-        <a class="main-nav__link site-link" href="catalog.html">Каталог продукции</a>
-        <a class="main-nav__link site-link" href="form.html">Подбор программы</a>
-      </nav>
-    </header>
-    <main class="main-container">
-      <section class="hero">
-        <h1 class="hero__heading heading">Функциональное питание для котов</h1>
-        <p class="hero__subheading">Занялся собой? Займись котом!</p>
-        <a class="hero__button button" href="form.html">Подобрать программу</a>
-      </section>
-      <section class="diet diet--slim">
-        <h2 class="diet__heading heading">Похудение</h2>
-        <p class="diet__intro">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
-        </p>
-        <a class="diet__link site-link" href="catalog.html#slim">Каталог Slim</a>
-      </section>
-      <section class="diet diet--pro">
-        <h2 class="diet__heading heading">Набор массы</h2>
-        <p class="diet__intro">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
-        </p>
-        <a class="diet__link site-link" href="catalog.html#pro">Каталог Pro</a>
-      </section>
-      <section class="advantages">
-        <h2 class="advantages__heading">Как это работает</h2>
-        <ul class="advantages__list">
-          <li class="advantages__item advantages__item--benefit">Функциональное питание cодержит только полезные питательные вещества.
-          </li>
-          <li class="advantages__item advantages__item--release-form">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
-          </li>
-          <li class="advantages__item advantages__item--replace-food">Замените один-два приема обычной еды на наше функциональное питание.
-          </li>
-          <li class="advantages__item advantages__item--fast-result">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
-          </li>
-        </ul>
-      </section>
-      <section class="example">
-        <h2 class="example__heading">Живой пример</h2>
-        <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-        </p>
-        <dl class="example__list">
-          <dt class="example__weight">5кг</dt>
-          <dd class="example__description">Снижение веса</dd>
-        </dl>
-        <dl class="example__list">
-          <dt class="example__time">60 дней</dt>
-          <dd class="example__description">Затрачено времени</dd>
-        </dl>
-        <p class="example__expenses">Затраты на питание: 15 000 руб.</p>
-        <div class="example__slider">
-          <img class="example__image-before" src="" width="" height="" alt="Толстый кот.">
-          <img class="example__image-after" src="" width="" height="" alt="Стройный кот.">
-          <button class="example__button" type="button" aria-label="Подвиньте вправо или влево.">
-            <svg ></svg>
-          </button>
-        </div>
-      </section>
-      <section class="invite-dealers">
-        <h3 class="invite-dealers__heading">Приглашаем к сотрудничеству дилеров!</h3>
-        <p class="invite-dealers__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-        <img class="invite-dealers__map" src="" width="" height="" alt="Карта местоположения офиса">
-      </section>
-    </main>
-    <footer class="footer">
-      <a class="footer__logo logo">
-        <svg></svg>
-      </a>
-      <div class="footer__social-wrapper">
-        <a class="footer__social-link footer__social-link--vk" href="https://vk.com/htmlacademy" aria-label="Вконтакте.">
-          <svg></svg>
-        </a>
-        <a class="footer__social-link footer__social-link--youtube" href="https://www.youtube.com/user/htmlacademyru" aria-label="Ютуб.">
-          <svg></svg>
-        </a>
-        <a class="footer__social-link footer__social-link--telegram" href="https://t.me/htmlacademy" aria-label="Телеграм.">
-          <svg></svg>
-        </a>
       </div>
-      <a class="footer__Academy-logo" href="https://htmlacademy.ru/">
+    </section>
+    <section class="invite-dealers">
+      <h3 class="invite-dealers__title">Приглашаем к сотрудничеству дилеров!</h3>
+      <p class="invite-dealers__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      <img class="invite-dealers__map" src="" width="" height="" alt="Карта местоположения офиса">
+    </section>
+  </main>
+  <footer class="footer">
+    <a class="logo logo--letter">
+      <svg></svg>
+    </a>
+    <div class="social">
+      <a class="social__link social__link--vk" href="https://vk.com/htmlacademy" aria-label="Вконтакте.">
         <svg></svg>
       </a>
-    </footer>
-  </body>
+      <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru"
+        aria-label="Ютуб.">
+        <svg></svg>
+      </a>
+      <a class="social__link social__link--telegram" href="https://t.me/htmlacademy" aria-label="Телеграм.">
+        <svg></svg>
+      </a>
+    </div>
+    <a class="footer__Academy-logo" href="https://htmlacademy.ru/">
+      <svg></svg>
+    </a>
+  </footer>
+</body>
+
 </html>
